--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,9 +1,7 @@
-<!-- <table class="table qubera-table"
-       *ngIf="kycStatus === KYC_STATUS.SUCCESS && quberaBalance.balance > 0"> -->
 <ng-container *ngIf="!loading">
   <table
     class="table qubera-table"
-    *ngIf="quberaBalance.length > 0"
+    *ngIf="balances && (kycStatus === KYC_STATUS.SUCCESS)"
   >
     <thead>
       <tr>
@@ -11,7 +9,6 @@
         <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Total balance' | translate}}</th>
         <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Available balance' | translate}}</th>
         <th class="table__cell-head table__cell-head--tac">{{'Deposit' | translate}}</th>
-        <!-- <th class="table__cell-head table__cell-head--tac">{{'Transfer' | translate}}</th> -->
         <th class="table__cell-head table__cell-head--tac">{{'Withdraw' | translate}}</th>
       </tr>
     </thead>
@@ -21,7 +18,7 @@
     >
       <tr
         class="table__row"
-        *ngFor="let balance of quberaBalance; trackBy: trackByFn"
+        *ngFor="let balance of [balances]; trackBy: trackByFn"
       >
         <td class="table__cell">
           <div class="balance__currency">
@@ -44,9 +41,6 @@
             (click)="cryptoDepositQuberaOut.emit(true)"
           >{{'Deposit' | translate}}</button>
         </td>
-        <!-- <td class="table__cell"> -->
-        <!-- <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferQuberaOut.emit(true)" >{{'Transfer' | translate}}</button> -->
-        <!-- </td> -->
         <td class="table__cell">
           <button
             class="btn btn--center btn--empty-blue btn--small btn--hidden"
@@ -54,27 +48,16 @@
           >{{'Withdraw' | translate}}</button>
         </td>
       </tr>
-      <tr
-        class="table__row balance__table-row"
-        *ngIf="!quberaBalance.length"
-      >
-        <td
-          class="table__cell table__cell--tac"
-          colspan="10"
-        >
-          {{'No matching records found' | translate}}
-        </td>
-      </tr>
     </tbody>
   </table>
 
   <div
     class="no-veryfied-qubera"
-    *ngIf="!balances.length"
+    *ngIf="!balances"
   >
     <div
       class="qubera-head"
-      *ngIf="balances.length > 0"
+      *ngIf="!(kycStatus === KYC_STATUS.SUCCESS || kycStatus === KYC_STATUS.PENDING)"
     >
       <h3>
         {{'Open account for $20 and get 0% commission' | translate}} <br>
@@ -84,14 +67,10 @@
 
     <!-- если не зареган на fug -->
 
-    <!-- <div class="qubera-btn-wr" *ngIf="kycStatus !== 'SUCCESS' && kycStatus !== 'Pending'"> -->
-    <!-- <div class="qubera-btn-wr">
-          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Create KYC' | translate}}</button>
-        </div> -->
     <div [ngSwitch]="kycStatus">
       <div
         class="qubera-btn-wr"
-        *ngSwitchCase="'SUCCESS'"
+        *ngSwitchCase="KYC_STATUS.SUCCESS"
       >
         <button
           class="btn btn--active balance__title-btn"
@@ -104,7 +83,7 @@
 
       <div
         class="wait-block-wr"
-        *ngSwitchCase="'Pending'"
+        *ngSwitchCase="KYC_STATUS.PENDING"
       >
         <div class="wait-block">
           <svg
@@ -184,15 +163,12 @@
       <!-- end 'если заявка на подтверждении' -->
     </div>
 
-
-    <!-- <div class="qubera-btn-wr" *ngIf="kycStatus == 'SUCCESS'"> -->
-
     <!-- end 'если не зареган на fug' -->
 
 
     <div
       class="qubera-benefits"
-      *ngIf="balances.length > 0"
+      *ngIf="!(kycStatus === KYC_STATUS.SUCCESS || kycStatus === KYC_STATUS.PENDING)"
     >
       <div class="ben-head">
         <h6>{{'Benefits' | translate}}</h6>
@@ -368,7 +344,7 @@
     </div> -->
     <div
       class="how-work"
-      *ngIf="kycStatus !== 'SUCCESS'"
+      *ngIf="kycStatus !== KYC_STATUS.SUCCESS"
     >
       <h6>{{'How does it work?' | translate}}</h6>
       <p>
@@ -389,5 +365,23 @@
       </p>
     </div>
 
+  </div>
+  <div
+    class="no-veryfied-qubera"
+    *ngIf="balances"
+  >
+    <div class="detail-inf">
+      <p>
+        {{'Detailed description of the conditions is available on the page of our financial partner' | translate}}
+        <a
+          href="http://fug.sg"
+          target="_blank"
+          title="FUG"
+          rel="nofollow noopener noreferrer"
+        >
+          FUG
+        </a>.
+      </p>
+    </div>
   </div>
 </ng-container>
