--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -18,12 +18,14 @@
         'currency-pair-info__info--down': flagForArrow('down')
       }"
     >
-      <div class="currency-pair-info__info-inner">
+      <div
+        class="currency-pair-info__info-inner"
+        *ngIf="currentCurrencyInfo"
+      >
         <div class="currency-pair-info__change">
           <span>
-            {{currentCurrencyInfo?.percentChange || 0 | number:'1.0-2' | replaceNumber}}%
+            {{currentCurrencyInfo.percentChange | positivePipe | currencyFormat: 'USD'}}%
           </span>
-          <!--<span>{{currentCurrencyInfo.percentChange >= 0 ? '+' : '-'}}{{!currentCurrencyInfo.percentChange ? 0 : currentCurrencyInfo.percentChange}}%</span>-->
           <img
             class="currency-pair-info__arr-up"
             src="../assets/img/arr-up-green.svg"
@@ -37,26 +39,19 @@
             *ngIf="flagForArrow('down')"
           >
 
-          <span *ngIf="(currentCurrencyInfo?.changedValue) < 0.01 && (currentCurrencyInfo?.changedValue) > 0; else changedValue">
-            {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : false }} {{pair.name | splitCurrency : 2}}
+          <span>
+            {{currentCurrencyInfo.changedValue | currencyFormat}} {{pair.name | splitCurrency : 2}}
           </span>
-          <ng-template #changedValue>
-            <span>
-              {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : isFiat(2) }} {{pair.name | splitCurrency : 2}}
-            </span>
-          </ng-template>
         </div>
         <div
           class="currency-pair-info__price"
-          *ngIf="(currentCurrencyInfo?.currencyRate) < 0.01 && (currentCurrencyInfo?.currencyRate) > 0; else currencyRate"
+          [ngClass]="{
+            'currency-pair-info__price--up': lastPriceDir('up'),
+            'currency-pair-info__price--down': lastPriceDir('down')
+          }"
         >
-          {{currentCurrencyInfo?.currencyRate || 0 | replaceNumber : false }} {{pair.name | splitCurrency : 2}}
+          {{currentCurrencyInfo.currencyRate | currencyFormat}} {{pair.name | splitCurrency : 2}}
         </div>
-        <ng-template #currencyRate>
-          <div class="currency-pair-info__price">
-            {{currentCurrencyInfo?.currencyRate || 0 | replaceNumber : isFiat(2) }} {{pair.name | splitCurrency : 2}}
-          </div>
-        </ng-template>
       </div>
     </div>
     <div
