--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -121,7 +121,9 @@
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Type' | translate}}</div>
-                  <div class="table__details-item-value"><span class="txt-green">{{item.operationType | replaceChar: '_': ' '}}</span></div>
+                  <div class="table__details-item-value">
+                    <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType | replaceChar: '_': ' '}}</span>
+                  </div>
                 </div>
                 <div class="table__details-item">
                   <div class="table__details-item-title">{{'Total' | translate}}</div>
