Fixed terms and conditions

--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -85,8 +85,8 @@
             <path d="M3.42383 7.38525L6.16746 9.89641L15.4752 1" stroke="#BFBFBF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </span>{{'By registering you agree with' | translate}}</div>
-        <a class="popup__link" [routerLink]="'/static/terms-and-conditions'" target="_blank">{{'Terms and conditions' | translate}}</a>
-        <a class="popup__link popup__link--mob" [routerLink]="'/static/terms-and-conditions'" target="_blank">{{'Terms of use' | translate}}</a>
+        <a class="popup__link" href="https://about.exrates.me/en/terms-of-use/">{{'Terms and conditions' | translate}}</a>
+        <a class="popup__link popup__link--mob" href="https://about.exrates.me/en/terms-of-use/">{{'Terms and conditions' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>{{'Already have an account?' | translate}}</span>
