Fixed terms and conditions

--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -121,18 +121,14 @@
           </span>{{'By registering you agree with' | translate}}</div>
         <a
           class="popup__link"
-          [routerLink]="'/static/terms-and-conditions'"
-          target="_blank"
-          rel="nofollow noopener noreferrer"
+          href="https://about.exrates.me/terms-of-use"
           title="Terms and conditions"
         >{{'Terms and conditions' | translate}}</a>
         <a
           class="popup__link popup__link--mob"
-          [routerLink]="'/static/terms-and-conditions'"
-          target="_blank"
-          rel="nofollow noopener noreferrer"
-          title="Terms of use"
-        >{{'Terms of use' | translate}}</a>
+          href="https://about.exrates.me/terms-of-use"
+          title="Terms and conditions"
+        >{{'Terms and conditions' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>{{'Already have an account?' | translate}}</span>
