--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -120,7 +120,7 @@
     <button
       class="btn settings__form-btn settings__password-btn"
       [ngClass]="{'settings__form-btn--active': form.valid}"
-      [disabled]="loading"
+      [disabled]="loading || !form.valid"
     >{{'Change password' | translate}}</button>
   </form>
 </div>
