--- a/src/assets/scss/pages/settings/kyc/_settings-kyc.scss
+++ b/src/assets/scss/pages/settings/kyc/_settings-kyc.scss
@@ -207,8 +207,8 @@
       margin-bottom: 0;
     }
     &__identity-error {
-        margin-bottom: 0;
-        margin-right: 32px;
+      margin-bottom: 0;
+      margin-right: 32px;
     }
   }
 }
@@ -216,11 +216,11 @@
 @media (min-width: 1200px) {
   .kyc {
     &__documents-row{
-        flex-direction: row;
-        justify-content: space-between;
+      flex-direction: row;
+      justify-content: space-between;
     }
     &__example-block{
-        margin-bottom: 0;
+      margin-bottom: 0;
     }
   }
 }
@@ -235,8 +235,8 @@
   .title-block{
     margin-bottom: 19px;
     @media(max-width: 1199px){
-    text-align: center;
-  }
+      text-align: center;
+    }
     h4{
       color: #ffffff;
       font-size: 14px;
@@ -246,6 +246,9 @@
   .id-wr{
     display: flex;
     align-items: center;
+    @media(max-width: 460px){
+      flex-direction: column;
+    }
   }
   .id-text{
     margin-right: 17px;
@@ -253,10 +256,16 @@
     border-radius: 4px;
     padding: 17px;
     width: 230px;
+    @media(max-width: 460px){
+      margin: 0 auto 19px;
+    }
     p{
       color: #d7d7f2;
       font-size: 14px;
       font-weight: 400;
+      @media(max-width: 460px){
+        text-align: center;
+      }
     }
   }
   .copy-button{
