--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -1,5 +1,5 @@
 <div
-  class="fiat-deposit-s1 qubera-deposite-s1"
+  class="fiat-deposit-s1 qubera-deposite-s1 side-popups"
   *ngIf="!!activeFiat && !!fiatDataByName"
 >
   <h2>Make fiat deposit in EUR</h2>
@@ -18,6 +18,7 @@
           (click)="toggleCurrencyDropdown()"
           [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
         >
+        <div class="icon-wr">
           <img
             [src]="activeFiat.name | getIconUrl:true"
             class="select__list-item-icon select__list-item-icon--mobile"
@@ -26,6 +27,7 @@
             [src]="activeFiat.name | getIconUrl"
             class="select__list-item-icon select__list-item-icon--destop"
           >
+          </div>
           {{activeFiat.name}}
         </div>
         <div class="select__label">{{'Currency' | translate}}</div>
@@ -41,10 +43,12 @@
             *ngFor="let currency of fiatNames"
             (click)="selectCurrency(currency)"
           >
+          <div class="icon-wr">
             <img
               [src]="currency.name | getIconUrl"
               class="select__list-item-icon"
             >
+          </div>
             {{currency.name}}
           </li>
         </ul>
@@ -58,10 +62,12 @@
           class="select__value select__value--active"
           (click)="togglePaymentSystemDropdown()"
         >
+        
           <img
             [src]="selectMerchantName | getIconUrl"
             class="select__list-item-icon"
           >
+      
           {{selectMerchantName}}
         </div>
         <div class="select__label">{{'Payment system' | translate}}</div>
