--- a/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/step-one-withdraw/step-one-withdraw.component.html
@@ -15,6 +15,7 @@
             (click)="toggleCurrencyDropdown()"
             [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
           >
+          <div class="icon-wr">
             <img
               [src]="activeFiat.name | getIconUrl:true"
               class="select__list-item-icon select__list-item-icon--mobile"
@@ -23,6 +24,7 @@
               [src]="activeFiat.name | getIconUrl"
               class="select__list-item-icon select__list-item-icon--destop"
             >
+          </div>
             {{activeFiat?.name}}
           </div>
           <div class="select__label">{{'Currency' | translate}}</div>
@@ -38,10 +40,12 @@
               *ngFor="let currency of fiatNames"
               (click)="selectCurrency(currency)"
             >
+            <div class="icon-wr">
               <img
                 [src]="currency.name | getIconUrl"
                 class="select__list-item-icon"
               >
+            </div>
               {{currency?.name}}
             </li>
           </ul>
