DEVEX-3860 changed urls

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -86,7 +86,7 @@
       </div>
       <div class="servise-page-wr">
         <div class="servise-page-item">
-          <a href="https://about.exrates.me/terms-of-use"><span>Terms & conditions</span></a>
+          <a [routerLink]="'/static/terms-and-conditions'"><span>Terms & conditions</span></a>
         </div>
         <div class="servise-page-item">
           <a href="https://about.exrates.me/privacy-policy"><span>Privacy policy</span></a>
