--- a/src/app/freecoins/freecoins.component.html
+++ b/src/app/freecoins/freecoins.component.html
@@ -1,3 +1,453 @@
-<p>
-  freecoins works!
-</p>
+<div class="container freecoins-container">
+  <div class="freecoins-head-container">
+    <div class="txt-container">
+      <h1 class="page-title__text">Free Coins</h1>
+      <p>You can collect free coins every day. Watch the counters and don't miss fre coins.</p>
+    </div>  
+    <div class="button-wr">
+      <button
+      class="btn btn--active balance__title-btn"  
+      >
+      {{'Give away free coins' | translate}}
+    </button>
+  </div>
+</div>
+<div class="freecoins-table-container">
+  <table class="table ballance-table">
+    <thead>
+      <tr>
+        <th class="table__cell-head table__cell-head--tal">{{'Coins' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tar">{{'Amount' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tar">{{'Time Left' | translate}}</th>
+        <th class="table__cell-head table__cell-head--tac">
+          <div class="button-cont">
+            <span>{{'Actions' | translate}}</span>
+          </div>
+        </th>
+      </tr>
+    </thead>
+    <tbody class="table__body">
+      <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+      class="table__row balance__table-row"
+      >
+      <td class="table__cell">
+        <div class="balance__currency">
+          <div class="balance__currency-icon">
+            <img src="assets/img/currency-icons/btc.svg">
+          </div>
+          <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span>
+        </div>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>0.0009</span>
+      </td>
+      <td class="table__cell table__cell--tar">
+        <span>12.22</span>
+      </td>
+      <td class="table__cell">
+        <div class="button-cont">
+          <button
+          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          >{{'Receive' | translate}}</button>
+        </div>
+      </td>
+    </tr>
+    <tr
+    class="table__row balance__table-row"
+    >
+    <td class="table__cell">
+      <div class="balance__currency">
+        <div class="balance__currency-icon">
+          <img src="assets/img/currency-icons/btc.svg">
+        </div>
+        <span style="min-width: 70px;">BTC</span>
+        <span class="balance__currency-name">Bitcoin</span>
+      </div>
+    </td>
+    <td class="table__cell table__cell--tar">
+      <span>0.0009</span>
+    </td>
+    <td class="table__cell table__cell--tar">
+      <span>12.22</span>
+    </td>
+    <td class="table__cell">
+      <div class="button-cont">
+        <button
+        class="btn btn--center btn--empty-blue btn--small btn--hidden"
+        >{{'Receive' | translate}}</button>
+      </div>
+      
+    </td>
+  </tr>
+  <tr
+  class="table__row balance__table-row"
+  >
+  <td class="table__cell">
+    <div class="balance__currency">
+      <div class="balance__currency-icon">
+        <img src="assets/img/currency-icons/btc.svg">
+      </div>
+      <span style="min-width: 70px;">BTC</span>
+      <span class="balance__currency-name">Bitcoin</span>
+    </div>
+  </td>
+  <td class="table__cell table__cell--tar">
+    <span>0.0009</span>
+  </td>
+  <td class="table__cell table__cell--tar">
+    <span>12.22</span>
+  </td>
+  <td class="table__cell">
+    <div class="button-cont">
+      <button
+      class="btn btn--center btn--empty-blue btn--small btn--hidden"
+      >{{'Receive' | translate}}</button>
+    </div>
+  </td>
+</tr>
+<tr
+class="table__row balance__table-row"
+>
+<td class="table__cell">
+  <div class="balance__currency">
+    <div class="balance__currency-icon">
+      <img src="assets/img/currency-icons/btc.svg">
+    </div>
+    <span style="min-width: 70px;">BTC</span>
+    <span class="balance__currency-name">Bitcoin</span>
+  </div>
+</td>
+<td class="table__cell table__cell--tar">
+  <span>0.0009</span>
+</td>
+<td class="table__cell table__cell--tar">
+  <span>12.22</span>
+</td>
+<td class="table__cell">
+ <div class="button-cont">
+  <button
+  class="btn btn--center btn--empty-blue btn--small btn--hidden"
+  >{{'Receive' | translate}}</button>
+</div>
+</td>
+</tr>
+<tr
+class="table__row balance__table-row"
+>
+<td class="table__cell">
+  <div class="balance__currency">
+    <div class="balance__currency-icon">
+      <img src="assets/img/currency-icons/btc.svg">
+    </div>
+    <span style="min-width: 70px;">BTC</span>
+    <span class="balance__currency-name">Bitcoin</span>
+  </div>
+</td>
+<td class="table__cell table__cell--tar">
+  <span>0.0009</span>
+</td>
+<td class="table__cell table__cell--tar">
+  <span>12.22</span>
+</td>
+<td class="table__cell">
+  <div class="button-cont">
+    <button
+    class="btn btn--center btn--empty-blue btn--small btn--hidden"
+    >{{'Receive' | translate}}</button>
+  </div>
+</td>
+</tr>
+<tr
+class="table__row balance__table-row"
+>
+<td class="table__cell">
+  <div class="balance__currency">
+    <div class="balance__currency-icon">
+      <img src="assets/img/currency-icons/btc.svg">
+    </div>
+    <span style="min-width: 70px;">BTC</span>
+    <span class="balance__currency-name">Bitcoin</span>
+  </div>
+</td>
+<td class="table__cell table__cell--tar">
+  <span>0.0009</span>
+</td>
+<td class="table__cell table__cell--tar">
+  <span>12.22</span>
+</td>
+<td class="table__cell">
+  <div class="button-cont">
+    <button
+    class="btn btn--center btn--empty-blue btn--small btn--hidden"
+    >{{'Receive' | translate}}</button>
+  </div>
+</td>
+</tr>
+</tbody>
+</table>
+<div class="banner-wr">
+  <img src="assets/img/banner03.png" alt="">
+</div>  
+</div>
+</div>
