--- a/src/assets/scss/pages/_freecoins.scss
+++ b/src/assets/scss/pages/_freecoins.scss
@@ -15,6 +15,9 @@
 		display: flex;
 		justify-content: space-between;
 	}
+	.freecoins-head-container{
+		width: 82.5%;
+	}
 	.table{
 		width: 82.5%;
 
