--- a/src/app/freecoins/freecoins.component.html
+++ b/src/app/freecoins/freecoins.component.html
@@ -36,15 +36,28 @@
           <div class="balance__currency-icon">
             <img src="assets/img/currency-icons/btc.svg">
           </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
+          <div class="currency-inf">
+           <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span> 
+          </div>
+          
         </div>
       </td>
       <td class="table__cell table__cell--tar">
         <span>0.0009</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>12.22</span>
+        <div class="timer">
+          <span>12.22</span>
+        </div>
+        <div class="button-wr-mobile mobile-content hide">
+          <button
+          class="btn btn--center btn--small"
+          >{{'Receive' | translate}}</button>
+        </div>
+        <div class="freecoin-message mobile-content hide">
+          <span>Already used</span>
+        </div>
       </td>
       <td class="table__cell">
         <div class="button-cont">
@@ -62,15 +75,28 @@
           <div class="balance__currency-icon">
             <img src="assets/img/currency-icons/btc.svg">
           </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
+          <div class="currency-inf">
+           <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span> 
+          </div>
+          
         </div>
       </td>
       <td class="table__cell table__cell--tar">
         <span>0.0009</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>12.22</span>
+        <div class="timer hide">
+          <span>12.22</span>
+        </div>
+        <div class="button-wr-mobile mobile-content">
+          <button
+          class="btn btn--center btn--small"
+          >{{'Receive' | translate}}</button>
+        </div>
+        <div class="freecoin-message mobile-content hide">
+          <span>Already used</span>
+        </div>
       </td>
       <td class="table__cell">
         <div class="button-cont">
@@ -88,41 +114,28 @@
           <div class="balance__currency-icon">
             <img src="assets/img/currency-icons/btc.svg">
           </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
+          <div class="currency-inf">
+           <span style="min-width: 70px;">BTC</span>
+          <span class="balance__currency-name">Bitcoin</span> 
           </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
+          
         </div>
       </td>
       <td class="table__cell table__cell--tar">
         <span>0.0009</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <span>12.22</span>
+        <div class="timer hide">
+          <span>12.22</span>
+        </div>
+        <div class="button-wr-mobile mobile-content hide">
+          <button
+          class="btn btn--center btn--small"
+          >{{'Receive' | translate}}</button>
+        </div>
+        <div class="freecoin-message mobile-content txt-red">
+          <span>Already used</span>
+        </div>
       </td>
       <td class="table__cell">
         <div class="button-cont">
@@ -132,319 +145,8 @@
         </div>
       </td>
     </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-      class="table__row balance__table-row"
-      >
-      <td class="table__cell">
-        <div class="balance__currency">
-          <div class="balance__currency-icon">
-            <img src="assets/img/currency-icons/btc.svg">
-          </div>
-          <span style="min-width: 70px;">BTC</span>
-          <span class="balance__currency-name">Bitcoin</span>
-        </div>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>0.0009</span>
-      </td>
-      <td class="table__cell table__cell--tar">
-        <span>12.22</span>
-      </td>
-      <td class="table__cell">
-        <div class="button-cont">
-          <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
-          >{{'Receive' | translate}}</button>
-        </div>
-      </td>
-    </tr>
-    <tr
-    class="table__row balance__table-row"
-    >
-    <td class="table__cell">
-      <div class="balance__currency">
-        <div class="balance__currency-icon">
-          <img src="assets/img/currency-icons/btc.svg">
-        </div>
-        <span style="min-width: 70px;">BTC</span>
-        <span class="balance__currency-name">Bitcoin</span>
-      </div>
-    </td>
-    <td class="table__cell table__cell--tar">
-      <span>0.0009</span>
-    </td>
-    <td class="table__cell table__cell--tar">
-      <span>12.22</span>
-    </td>
-    <td class="table__cell">
-      <div class="button-cont">
-        <button
-        class="btn btn--center btn--empty-blue btn--small btn--hidden"
-        >{{'Receive' | translate}}</button>
-      </div>
-      
-    </td>
-  </tr>
-  <tr
-  class="table__row balance__table-row"
-  >
-  <td class="table__cell">
-    <div class="balance__currency">
-      <div class="balance__currency-icon">
-        <img src="assets/img/currency-icons/btc.svg">
-      </div>
-      <span style="min-width: 70px;">BTC</span>
-      <span class="balance__currency-name">Bitcoin</span>
-    </div>
-  </td>
-  <td class="table__cell table__cell--tar">
-    <span>0.0009</span>
-  </td>
-  <td class="table__cell table__cell--tar">
-    <span>12.22</span>
-  </td>
-  <td class="table__cell">
-    <div class="button-cont">
-      <button
-      class="btn btn--center btn--empty-blue btn--small btn--hidden"
-      >{{'Receive' | translate}}</button>
-    </div>
-  </td>
-</tr>
-<tr
-class="table__row balance__table-row"
->
-<td class="table__cell">
-  <div class="balance__currency">
-    <div class="balance__currency-icon">
-      <img src="assets/img/currency-icons/btc.svg">
-    </div>
-    <span style="min-width: 70px;">BTC</span>
-    <span class="balance__currency-name">Bitcoin</span>
-  </div>
-</td>
-<td class="table__cell table__cell--tar">
-  <span>0.0009</span>
-</td>
-<td class="table__cell table__cell--tar">
-  <span>12.22</span>
-</td>
-<td class="table__cell">
- <div class="button-cont">
-  <button
-  class="btn btn--center btn--empty-blue btn--small btn--hidden"
-  >{{'Receive' | translate}}</button>
-</div>
-</td>
-</tr>
-<tr
-class="table__row balance__table-row"
->
-<td class="table__cell">
-  <div class="balance__currency">
-    <div class="balance__currency-icon">
-      <img src="assets/img/currency-icons/btc.svg">
-    </div>
-    <span style="min-width: 70px;">BTC</span>
-    <span class="balance__currency-name">Bitcoin</span>
-  </div>
-</td>
-<td class="table__cell table__cell--tar">
-  <span>0.0009</span>
-</td>
-<td class="table__cell table__cell--tar">
-  <span>12.22</span>
-</td>
-<td class="table__cell">
-  <div class="button-cont">
-    <button
-    class="btn btn--center btn--empty-blue btn--small btn--hidden"
-    >{{'Receive' | translate}}</button>
-  </div>
-</td>
-</tr>
-<tr
-class="table__row balance__table-row"
->
-<td class="table__cell">
-  <div class="balance__currency">
-    <div class="balance__currency-icon">
-      <img src="assets/img/currency-icons/btc.svg">
-    </div>
-    <span style="min-width: 70px;">BTC</span>
-    <span class="balance__currency-name">Bitcoin</span>
-  </div>
-</td>
-<td class="table__cell table__cell--tar">
-  <span>0.0009</span>
-</td>
-<td class="table__cell table__cell--tar">
-  <span>12.22</span>
-</td>
-<td class="table__cell">
-  <div class="button-cont">
-    <button
-    class="btn btn--center btn--empty-blue btn--small btn--hidden"
-    >{{'Receive' | translate}}</button>
-  </div>
-</td>
-</tr>
+
+    
 </tbody>
 </table>
 <div class="banner-wr">
