--- a/src/app/freecoins/freecoins.component.html
+++ b/src/app/freecoins/freecoins.component.html
@@ -64,6 +64,7 @@
           <button
           class="btn btn--center btn--empty-blue btn--small btn--hidden"
           >{{'Receive' | translate}}</button>
+          <app-loader size="small" class="loader-wr hide"></app-loader>
         </div>
       </td>
     </tr>
@@ -101,8 +102,9 @@
       <td class="table__cell">
         <div class="button-cont">
           <button
-          class="btn btn--center btn--empty-blue btn--small btn--hidden"
+          class="btn btn--center btn--empty-blue btn--small btn--hidden hide"
           >{{'Receive' | translate}}</button>
+          <app-loader size="small" class="loader-wr"></app-loader>
         </div>
       </td>
     </tr>
@@ -142,6 +144,7 @@
           <button
           class="btn btn--center btn--empty-blue btn--small btn--hidden"
           >{{'Receive' | translate}}</button>
+          <app-loader size="small" class="loader-wr hide"></app-loader>
         </div>
       </td>
     </tr>
