--- a/src/assets/scss/pages/_freecoins.scss
+++ b/src/assets/scss/pages/_freecoins.scss
@@ -123,14 +123,10 @@
 		display: none;
 
 	}
+}
 
-	.mobile-content{
-		.btn{
-			
-	 		// @media(max-width: 640px){
-	 		// 	margin-left: auto;
-	 		// 	margin-right: 0;
-	 		// }
-	 	}
-	 }
-	}
+
+.freecoins-table-container div.sk-circle-bounce {
+	width: 25px;
+	height: 25px;
+}
