--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -121,6 +121,18 @@
             <!--Input error section ends-->
           </div>
         </div>
+        <div class="radio-buttons-wr">
+          <p>Are you a U.S. citizen/resident?</p>
+        <div class="radio-item">
+          <input type="radio" id="notusa" checked name="usa">
+          <label for="notusa">No, I am not</label>
+        </div>
+        <div class="radio-item">
+          <input type="radio" id="usa" name="usa">
+          <label for="usa">Yes, I am</label>
+        </div>
+
+      </div> 
         <button class="btn popup__btn"
                 (click)="onSubmit()"
                 [disabled]="!loginForm.valid || loading"
