--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -80,7 +80,18 @@
             <!--Input error section ends-->
           </div>
         </div>
+        <div class="radio-buttons-wr">
+          <p>Are you a U.S. citizen/resident?</p>
+        <div class="radio-item">
+          <input type="radio" id="notusa" checked name="usa">
+          <label for="notusa">No, I am not</label>
+        </div>
+        <div class="radio-item">
+          <input type="radio" id="usa" name="usa">
+          <label for="usa">Yes, I am</label>
+        </div>
 
+      </div> 
         <button
           class="btn popup__btn"
           [disabled]="emailForm.get('email').invalid
@@ -98,7 +109,8 @@
       </form>
 
       <div class="popup__links-wrap mobile-container">
-        <div class="agree-terms"><span class="accept-icon">
+        <div class="agree-terms">
+          <!-- <span class="accept-icon">
             <svg
               width="17"
               height="14"
@@ -118,7 +130,12 @@
                 stroke-linejoin="round"
               />
             </svg>
-          </span>{{'By registering you agree with' | translate}}</div>
+          </span> -->
+          <div class="checkbox-wr">
+            <input type="checkbox" name='agreement' id="agreement">
+            <label for="agreement">{{'By registering you agree with' | translate}}</label>
+          </div>
+        </div>
         <a
           class="popup__link"
           routerLink="/static/terms-and-conditions"
@@ -132,6 +149,7 @@
           (click)="popupService.closeRegistrationPopup()"
         >{{'Terms and conditions' | translate}}</a>
       </div>
+       
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>{{'Already have an account?' | translate}}</span>
         <a
