--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.scss
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.scss
@@ -1,15 +1,15 @@
 re-captcha{
-  margin: 0 auto;
+	margin: 0 auto;
 }
 
 .btn--error {
-  background-color: #EB5757 !important;
-  color: #ffffff;
-  border: none;
+	background-color: #EB5757 !important;
+	color: #ffffff;
+	border: none;
 }
 
 .wrap-input__message {
-  color: #EB5757 !important;
+	color: #EB5757 !important;
   // position: absolute;
   top: 45px;
 }
@@ -18,14 +18,14 @@ re-captcha{
 }
 
 .popup__link--mob{
-		display: none;
-	}
+	display: none;
+}
 
 
 @media(max-width: 992px){
 	.accept-icon {
-    display: none;
-}
+		display: none;
+	}
 	.logo-login-mob{
 		display: block;
 		margin-bottom: 10px;
@@ -43,14 +43,14 @@ re-captcha{
 		line-height: 1;
 		font-size: 24px;
 		color: #DEDEFB;
-		    margin-bottom: 65px;
+		margin-bottom: 65px;
 	}
 	.popup {
 		.wrap-input--error{
-				.wrap-input__input{
-					color: #fff;
-				}
+			.wrap-input__input{
+				color: #fff;
 			}
+		}
 		.wrap-input__input{
 			&:focus {
 				&~ .wrap-input__label{
@@ -81,24 +81,24 @@ re-captcha{
 		max-width: unset;
 		margin-top: 18px;
 		color: #237BEF;
-    border-color: #237BEF;
-    &.popup__btn--active{
-    	color: #fff;
-    }
+		border-color: #237BEF;
+		&.popup__btn--active{
+			color: #fff;
+		}
 	}
 	.popup__link-text--mob{
 		
 		color: #576E9C;
 	}
 	.agree-terms{
-color: #576E9C;
-    font-size: 14px;
+		color: #576E9C;
+		font-size: 14px;
 	}
 	.popup__links-wrap{
 		justify-content: flex-start;
 		font-weight: 400;
-		    margin: 32px auto 0;
-    letter-spacing: .1px;
+		margin: 32px auto 0;
+		letter-spacing: .1px;
 	}
 	.popup__link{
 		font-size: 14px;
@@ -107,7 +107,7 @@ color: #576E9C;
 	}
 	.popup__link--mob{
 		font-size: 14px;
-		    margin-left: 3px;
+		margin-left: 3px;
 		display: flex;
 		justify-content: flex-start;
 	}
@@ -130,7 +130,7 @@ color: #576E9C;
 			margin-right: 2px;
 			color: #576E9C;
 			letter-spacing: -0.1px;
-    word-spacing: 1px;
+			word-spacing: 1px;
 		}
 	}
 	.popup__close{
@@ -151,5 +151,51 @@ color: #576E9C;
 
 // TEMP STYLE
 .input-hint-wrapper {
-  opacity: 1 !important;
+	opacity: 1 !important;
+}
+
+
+.checkbox-wr{
+	display: flex;
+	align-items: center;
+	input{
+		display: none;
+		&:checked{
+        &+label{
+          &::after{
+            opacity: 1;
+          }
+        }
+      }
+	}
+	label{
+		color: #A0A0A0;
+		position: relative;
+		padding-left: 19px;
+		&::before, &::after{
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+		&::before{
+			content: "";
+			width: 10px;
+			height: 10px;
+			border: 1px solid #A0A0A0;
+			border-radius: 1px;
+		}
+
+		&::after{
+			content: "";
+			width: 14px;
+			height: 11px;
+			top: -1px;
+			left: 2px;
+			background-image: url(assets/img/path.svg);
+			background-size: contain;
+			transition: .3s;
+			opacity: 0;
+		}
+	}
 }
