--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -576,7 +576,7 @@
       &__label {
         @media(min-width: 1200px){
 
-            color: #237BEF;
+          color: #237BEF;
         }
 
         &--error {
@@ -602,7 +602,7 @@
         &--show {
           // color: $light-grey;
           margin-top: 3px;
-              color: #94C2FF;
+          color: #94C2FF;
         }
 
         &--error {
@@ -612,14 +612,14 @@
 
       &__input {
         @media(min-width: 1200px){
-        border-color: #237BEF;
-      }
+          border-color: #237BEF;
+        }
         background-color: transparent;
         color:#000;
         @media(max-width: 1200px){
-              background-color: #191A39;
-              color: #DEDEFB;
-            }
+          background-color: #191A39;
+          color: #DEDEFB;
+        }
         &:focus {
           border-color: $darker-blue;
 
@@ -798,7 +798,7 @@
       background-color: #191A39;
       .modal__header-mob{
         // border-bottom: 1px solid #94C2FF;
-            border-bottom: 1px solid rgba(35, 123, 239, 0.15);
+        border-bottom: 1px solid rgba(35, 123, 239, 0.15);
       }
       .title{
         color: #DEDEFB;
@@ -849,5 +849,65 @@
 @media(max-width: 1199px){
   .dark-theme .modal .steps__number--valid:after {
     background-image: url("assets/img/step-valid--dark-theme.svg");
+  }
 }
+
+
+
+.radio-buttons-wr{
+  p{
+    color: #191A39;
+    margin-bottom: 12px;
+  }
+  .radio-item{
+    input{
+      display: none;
+      &:checked{
+        &+label{
+          &::after{
+            opacity: 1;
+          }
+        }
+      }
+    }
+    label{
+      color: #A0A0A0;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      white-space: nowrap;
+      font-size: 12px;
+      line-height: 14px;
+      position: relative;
+      padding-left: 20px;
+      margin-bottom: 8px;
+      &::before, &::after{
+        content: "";
+        border-radius: 50%;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+      &::before{
+        content: "";
+        width: 12px;
+        height: 12px;
+        border: 1px solid #A0A0A0;
+        border-radius: 50%;
+      }
+
+      &::after{
+        content: "";
+        width: 8px;
+        height: 8px;
+        top: 3px;
+        left: 3px;
+        background-color: #A0A0A0;
+        border-radius: 50%;
+        opacity: 0;
+        transition: .3s;
+      }
+    }
+
+  }
 }
